tests/_resources/error_gcns/E009_equals_instead_of_tilde.gcn
block HOUSEHOLD
{
    identities
    {
        Y[] = C[] + I[];
    };

    calibration
    {
        beta = maxent(Beta(), lower=0.95, upper=0.999, mass=0.99) = 0.99;
    };
};
